# mindmetrix_biomarker

./: .gitignore  README.md  Report Mindmetrix Assignment.docx  data_preprocessing.ipynb  pyproject.toml
.github/workflows/: ci.yml
data/raw/: subjects.csv
exploration/: exploration.ipynb
mindmetrix_biomarker/: exctract.py  loader.py  preprocess.py
results/: PCA.ipynb  biomarkers.ipynb
tests/: test_preprocess.py
tests/data/: subjects.csv  subjects_clean.csv  timeseries.csv  timeseries_clean.csv
visualization/: biomarkers.ipynb  cluster_PCA.ipynb  exploration.ipynb
