[project]
name = "mindmetrix_biomarker"
description = "MindMetrix Biomarker Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.6",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "jupyter==1.1.1",
    "plotly==5.15.0",
    "pandera>=0.29.0",
    "matplotlib==3.10.8",
    "seaborn==0.13.2"
]
version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["mindmetrix_biomarker"]

[tool.hatch.build.targets.sdist]
include = ["/mindmetrix_biomarker"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "ANN002",
    "ANN003",
    "ANN204",
    "ANN401",
    "COM812",
    "BLE001",
    "ERA001",
    "RET503",
    "ISC001",
    "N802",
    "N803",
    "N806",
    "N818",
    "S101",
    "PLC0415",
]


[tool.ruff.lint.isort]
lines-after-imports = 2


[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest==9.0.2", "ruff==0.15.1"]
